--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Test</title>
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
 	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
-	Test App
-	<script language="javascript" type="text/javascript" src="index.js"></script>
+    <div id="app"></div>
+    <script language="javascript" type="text/javascript" src="index.js"></script>
 </body>
 </html>
